--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "engines": {
     "node": ">=22.0.0"
   },
-  "dependencies": {},
   "scripts": {
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "start": "node dist/main.js --compiled",
     "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,html,css,json}\"",
     "eslint": "eslint --fix ."
   },
@@ -15,7 +16,7 @@
     "@eslint/compat": "^1.3.2",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.34.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.7.2",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint": "^9.34.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.2"
   }
 }
