--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-template",
   "version": "1.0.0",
-  "main": "dist/main.js",
+  "main": "src/main.ts",
   "type": "module",
   "engines": {
     "node": ">=22.0.0"
