--- a/package.json
+++ b/package.json
@@ -10,24 +10,23 @@
     "dev": "tsx --watch src/main.ts",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "start": "node dist/main.js --compiled",
-    "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,html,css,json}\"",
-    "eslint": "eslint --fix ."
+    "lint": "eslint --fix .",
+    "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,html,css,json}\""
   },
+  "dependencies": {},
   "devDependencies": {
-    "@eslint/compat": "^1.3.2",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.34.0",
+    "@eslint/js": "^9.39.3",
     "@types/node": "^24.7.2",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.41.0",
-    "eslint": "^9.34.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^9.39.3",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-unused-imports": "^4.2.0",
-    "globals": "^16.3.0",
+    "eslint-plugin-unused-imports": "^4.4.1",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2",
     "tsc-alias": "^1.8.16",
-    "typescript": "^5.9.2"
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.56.0"
   }
 }
