--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --fix .",
     "prettier": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,html,css,json}\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^17.3.1"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.3",
     "@types/node": "^24.7.2",
